# codegraphy

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  start.sh
example_graphs/sample/: nb.json
example_graphs/sample/src/: multiple.ts
src/: main.py  test.ipynb  test.py  test_main.py
src/api/: main.py
src/api/graphs/: api.py
src/api/graphs/domain/: graph.py
src/api/graphs/service/: graph_service.py
src/cells/: api.py
src/cells/domain/: cell.py
src/cells/service/: cell_service.py  python_service.py
src/exploration/: test.py
src/graphs/: api.py
src/graphs/domain/: graph.py
src/graphs/service/: graph_service.py
web/: .eslintignore  .eslintrc.cjs  .gitignore  .pnp.cjs  index.html  package.json  tsconfig.eslint.json
web/src/: App.tsx  main.tsx
web/src/Canvas/: canvas.css  index.tsx  sample.ts  types.ts
web/src/Canvas/Node/: CodeNodeFactory.tsx  CodeNodeModel.tsx  CodeNodeWidget.tsx
web/src/GraphLoader/: index.tsx
web/src/Header/: index.tsx
web/src/Header/EditableGraphPath/: index.tsx
web/src/Header/OpenGraph/: index.tsx
web/src/Header/ServerStatus/: index.tsx
web/src/api/: index.msw.ts  index.ts  orval.config.ts
web/src/api/schema/: apiRoot.ts  bodySaveCellContentsApiCellsCellIdPut.ts  bodySaveCellContentsApiCellsPut.ts  cellContent.ts  cellPosition.ts  codeCellModel.ts  codeCellModelExecutionTime.ts  codeCellModelParamsItem.ts  codeCellModelReturnsItem.ts  graphModel.ts  index.ts  (+25 more)
web/src/models/: index.ts  queryKeys.ts
web/src/util/: copyObject.ts  getEmptyGraph.ts  getKeyboardCommand.tsx
(+48 files in other folders)
