[tool.poetry]
name = "codegraphy"
version = "0.1.0"
description = "New generation coding environment"
authors = ["Alejandro Alvarez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
