[tool.poetry]
name = "codegraphy"
version = "0.1.0"
description = "New generation coding environment"
authors = ["Alejandro Alvarez"]
license = "BSD-3-Clause"
readme = "README.md"

packages = [
    { include = "src" },
]

include = [
  "web/dist/**/*",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
httpx = "^0.25.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
